public/assets/css/style.css
body {
  background-image: url("../images/mountain.jpeg");
  background-size: cover;
  background-attachment: fixed;
  background-repeat: no-repeat;
}

.custom-navbar {
  background-color: white;
}

a:hover {
  color: red;
}

.navbar-text {
  padding-top: 30px;
  margin-top: 0px;
  font-size: 22px;
  color: black;
}

.navbar:hover {
  color: red;
}

.navbar-logo {
  font-size: 60px;
  color: gray;
}

.navlink-col {
  text-align: center;
}

.bio-text {
  font-size: 18px;
  color: white;
}

.container {
  margin-top: 123px;
}

.contact-container {
  margin-top: 163px;
}

.jumbotron {
  background-color: rgba(243, 237, 237, 0);
}

.name-text {
  font-size: 75px;
  color: white;
  font-family: 'Ubuntu', sans-serif;
}

.job-text {
  color: lightgray;
}

.profile-image {
  height: 300px;
  border-radius: 50%;
  opacity: 1;
}

.component-shadow {
  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
}

.portfolio-item {
  width: 100%;
}

.contact-header {
  font-size: 80px;
  color: white;
  font-family: 'Ubuntu', sans-serif;
}

.contact-background {
  background-color: #f8f9fa;
  border-radius: 50%;
  padding: 0px;
}

.active {
  color: red;
  padding-top: 30px;
}

.custom-navbar {
  position: fixed;
  width: 100%;
  z-index: 2;
  top: 0;
}

.navlink-padding {

}

.content-fadein {
  -webkit-animation: fadein 3s;
  /* Safari, Chrome and Opera > 12.1 */
  -moz-animation: fadein 3s;
  /* Firefox < 16 */
  -ms-animation: fadein 3s;
  /* Internet Explorer */
  -o-animation: fadein 3s;
  /* Opera < 12.1 */
  animation: fadein 3s;
}

.contact-image:hover {
  transition: 0.70s;
  -webkit-transition: 0.70s;
  -moz-transition: 0.70s;
  -ms-transition: 0.70s;
  -o-transition: 0.70s;
  -webkit-transform: rotate(360deg);
  -moz-transform: rotate(360deg);
  -o-transform: rotate(360deg);
  -ms-transform: rotate(360deg);
  transform: rotate(360deg);
}

@media only screen and (max-width: 600px) {
  .profile-image {
    height: 200px;
    opacity: 1;
  }
  .name-text {
    font-size: 45px;
    opacity: 1;
    color: black;
  }
  .jumbotron {
    background-color: rgba(243, 237, 237, .7);
  }
  .job-text {
    color: black;
  }
  .container {
    margin-top: 93px;
  }
  .contact-background {
    margin: 10px;
  }
  .active:focus {
    color: red;
  }
  .navbar-logo {
    font-size: 50px;
    padding-left: 10px;
    padding-top: 5px;
  }
  .navlink-col {
    text-align: right;
  }
  .navbar-text {
    padding: 0px;
  }
  .navlink-padding {
    padding-top: 8px;
  }
}

